--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -48,3 +48,10 @@ security:
 
 logging:
   level.org.springframework.security: DEBUG
+
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: false
